# hybel

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  entrypoint.sh
backend/apps/messaging/: admin.py  apps.py  consumers.py  events.py  managers.py  models.py  permissions.py  routing.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/properties/: admin.py  models.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/requirements/: base.txt  dev.txt  prod.txt
frontend/: .gitignore  Dockerfile  eslint.config.mjs  jest.config.ts  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/__tests__/: Avatar.test.tsx  ComposeBox.test.tsx  ConnectionStatus.test.tsx  ConversationItem.test.tsx  ConversationList.test.tsx  Icon.test.tsx  MessageBubble.test.tsx  ParticipantList.test.tsx  SearchBar.test.tsx  SearchFilters.test.tsx  SearchResults.test.tsx  Sidebar.test.tsx  TypingIndicator.test.tsx  UserAutocomplete.test.tsx  api-contracts.test.ts  api.test.ts  auth.test.tsx  messaging.store.test.ts  performance-components.test.tsx  performance.test.ts  queryKeys.test.ts  useDebounce.test.ts  utils.test.ts  websocket.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  auth.tsx  providers.tsx  (+3 more)
nginx/: nginx.conf
(+55 files in other folders)
